--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/base-bootstrap.min.css" id="theme_css">
 	<link href="style.css" rel="stylesheet">
-	<script>
+<!--	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -18,6 +18,7 @@
 	  ga('send', 'pageview');
 
 	</script>
+-->
 </head>
 <body>
 <div id="loadScreen" style="width:100%; height:100%">
