--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Space Company</title>
 	<link href="SpaceCompanyFavicon.png" rel="shortcut icon" type="image/x-icon" />	
-	<link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+	<!--<link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+	<link href="bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/base-bootstrap.min.css" id="theme_css">
 	<link href="style.css" rel="stylesheet">
 <!--	<script>
